syntax = "proto3";
package masterclient;

message MasterClient {
    uint32 clientID = 1; // sender ID
    string application = 2;
    bytes dataset = 3;

    bool success = 4;
    bytes result = 5;
}
