syntax = "proto3";
package superstep;

message Superstep {
    enum Command{
      START = 0;
      RUN = 1;
      ACK = 2;
      VOTETOHALT = 3;
    }

    uint32 source = 1; // sender ID
    Command command = 2;
    uint64 stepcount = 3;
    string datasetFilename = 4;
    bytes result = 5
    // [{vertexID:id, value:val},{vertexID:id, value:val},{vertexID:id, value:val}...]
}
